# carway-code

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
carway/: __init__.py  asgi.py  set_admin_password.py  settings.py  urls.py  wsgi.py
carway/estimator/: __init__.py  admin.py  apps.py  forms.py  ml_utils.py  models.py  urls.py  views.py
carway/estimator/migrations/: 0001_initial.py
carway/listings/: __init__.py  admin.py  compare_urls.py  compare_views.py  forms.py  models.py  urls.py  views.py
carway/listings/migrations/: 0001_initial.py
carway/messaging/: __init__.py  forms.py  models.py  urls.py  views.py
carway/messaging/migrations/: 0001_initial.py
carway/notifications/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
carway/notifications/migrations/: 0001_initial.py
scripts/: organize_static.py
templates/: base.html  home.html  index.html  market_estimator.html
templates/listings/: comparison_dashboard.html  listing_confirm_delete.html  listing_create.html  listing_detail.html  listing_list.html  listing_update.html  model_dropdown_list_options.html  search.html  user_listings.html
templates/messaging/: conversation.html  inbox.html  message_form.html
templates/theme_templates/: add-car.html  home-cars.html  listings-grid-cars.html  single-car.html
templates/theme_templates/estimator/: estimator_home.html  manage_models.html  train_model.html
templates/theme_templates/includes/: notification_bell.html
templates/theme_templates/notifications/: notification_list.html  (+1 more)
(+8 files in other folders)
