[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "django>=5.2",
    "django-crispy-forms>=2.4",
    "joblib",
    "numpy",
    "pandas",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn",
]
